--- a/Model/Response Now/Interventions/dummy_data.ipynb
+++ b/Model/Response Now/Interventions/dummy_data.ipynb
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,7 +813,7 @@
     "            'Country_EN': properties.get('ADM0_EN', ''),\n",
     "            'Country_AR': properties.get('ADM0_AR', ''),\n",
     "            'Country_PCODE': properties.get('ADM0_PCODE', ''),\n",
-    "            'Coordinates': coordinates,\n",
+    "            # 'Coordinates': coordinates,\n",
     "        }\n",
     "        \n",
     "        # Only include municipal division details if ADM2 fields are present\n",
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -897,6 +897,35 @@
     "csv_file_path = '/Users/izzymohamed/Desktop/Horizon Scanner/egypt_horizon_scanner_frontend/assets/csv/interventions_municipal_division_map.csv'\n",
     "json_output_path = '/Users/izzymohamed/Desktop/Horizon Scanner/egypt_horizon_scanner_frontend/assets/json/interventions_municipal_division_map.json'\n",
     "extract_data_from_json(json_file_path, csv_file_path, json_output_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "# Specify the path to your JSON file\n",
+    "file_path = '/Users/izzymohamed/Desktop/Horizon Scanner/egypt-horizon-scanner/JSON/Response Now/Interventions Mapping/interventions_municipal_division_map copy.json'\n",
+    "\n",
+    "# Read the JSON data from the file\n",
+    "with open(file_path, 'r') as file:\n",
+    "    data = json.load(file)\n",
+    "\n",
+    "# Remove the 'Coordinates' key from each item in the JSON data if it exists\n",
+    "if isinstance(data, list):  # If the data is a list of dictionaries\n",
+    "    for item in data:\n",
+    "        item.pop('Coordinates', None)\n",
+    "elif isinstance(data, dict):  # If the data is a single dictionary\n",
+    "    data.pop('Coordinates', None)\n",
+    "\n",
+    "# Save the modified data back to the same JSON file\n",
+    "with open(file_path, 'w') as file:\n",
+    "    json.dump(data, file, indent=4)\n",
+    "\n",
+    "print(\"Coordinates key has been removed and the file has been updated.\")"
    ]
   }
  ],
