fixed mongo url link

--- a/Function/Response Now/Emergence Issue Of The Month/Emerging_Issues_of_the_Month_Model.ipynb
+++ b/Function/Response Now/Emergence Issue Of The Month/Emerging_Issues_of_the_Month_Model.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -77,18 +77,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 11,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/opt/homebrew/lib/python3.11/site-packages/jax/_src/lib/__init__.py:33: UserWarning: JAX on Mac ARM machines is experimental and minimally tested. Please see https://github.com/google/jax/issues/5501 in the event of problems.\n",
-            "  warnings.warn(\"JAX on Mac ARM machines is experimental and minimally tested. \"\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# IMPORTS\n",
         "# ALL\n",
@@ -114,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -262,15 +253,88 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 20,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "                          _id   Id            emergingIssue  \\\n",
+            "0    663066022d9553622737d20b    1  Transportation Problems   \n",
+            "1    663066022d9553622737d20c    2        Biodiversity Loss   \n",
+            "2    663066022d9553622737d20d    3            Food Security   \n",
+            "3    663066022d9553622737d20e    4         Cultural Decline   \n",
+            "4    663066022d9553622737d20f    5         Waste Management   \n",
+            "..                        ...  ...                      ...   \n",
+            "495  663066022d9553622737d3fa  496        Social Inequality   \n",
+            "496  663066022d9553622737d3fb  497              Water Issue   \n",
+            "497  663066022d9553622737d3fc  498            Education Gap   \n",
+            "498  663066022d9553622737d3fd  499         Cultural Decline   \n",
+            "499  663066022d9553622737d3fe  500            Food Security   \n",
+            "\n",
+            "                              issueTitle  \\\n",
+            "0             Inflation Control Measures   \n",
+            "1                Governmental Corruption   \n",
+            "2             Traffic Management Systems   \n",
+            "3            Subsidies for Local Farmers   \n",
+            "4    Agricultural Technology Investments   \n",
+            "..                                   ...   \n",
+            "495             Telemedicine Initiatives   \n",
+            "496           Coastal Erosion Mitigation   \n",
+            "497                Vaccination Campaigns   \n",
+            "498             Foreign Trade Agreements   \n",
+            "499                 SME Support Programs   \n",
+            "\n",
+            "                                           description      source  \\\n",
+            "0    Water scarcity in Egypt has been exacerbated b...  World Bank   \n",
+            "1    Investments in agricultural technology to incr...  World Bank   \n",
+            "2    Water scarcity in Egypt has been exacerbated b...      UNESCO   \n",
+            "3    Electoral reforms have been blocked by entrenc...         WHO   \n",
+            "4    Climate adaptation policies have failed to add...      UNICEF   \n",
+            "..                                                 ...         ...   \n",
+            "495  Traffic management systems have failed to alle...        NASA   \n",
+            "496  Habitat destruction in Egypt threatens unique ...         WHO   \n",
+            "497  SME support programs have been criticized for ...        NASA   \n",
+            "498  Enhancing national food reserve systems to buf...      UNICEF   \n",
+            "499  Providing subsidies to local farmers to stabil...      UNESCO   \n",
+            "\n",
+            "                                           sdgTargeted sentimentAnalysis  \\\n",
+            "0    [GOAL 6: Clean Water And Sanitation, GOAL 11: ...          negative   \n",
+            "1    [GOAL 13: Climate Action, GOAL 2: Zero Hunger,...          positive   \n",
+            "2    [GOAL 7: Affordable And Clean Energy, GOAL 8: ...          negative   \n",
+            "3    [GOAL 12: Responsible Consumption And Producti...          negative   \n",
+            "4                              [GOAL 15: Life on Land]          negative   \n",
+            "..                                                 ...               ...   \n",
+            "495  [GOAL 11: Sustainable Cities And Communities, ...          negative   \n",
+            "496  [GOAL 7: Affordable And Clean Energy, GOAL 10:...          negative   \n",
+            "497  [GOAL 11: Sustainable Cities And Communities, ...          negative   \n",
+            "498  [GOAL 14: Life Below Water, GOAL 6: Clean Wate...          positive   \n",
+            "499  [GOAL 4: Quality Education, GOAL 8: Decent Wor...          positive   \n",
+            "\n",
+            "     weight     score  \n",
+            "0       0.5  0.999186  \n",
+            "1       1.0  0.998950  \n",
+            "2       0.5  0.999186  \n",
+            "3       0.5  0.998679  \n",
+            "4       0.5  0.999431  \n",
+            "..      ...       ...  \n",
+            "495     0.5  0.999772  \n",
+            "496     0.5  0.996026  \n",
+            "497     0.5  0.988043  \n",
+            "498     1.0  0.998879  \n",
+            "499     1.0  0.974139  \n",
+            "\n",
+            "[500 rows x 10 columns]\n"
+          ]
+        }
+      ],
       "source": [
         "# Example usage:\n",
-        "mongo_uri = 'mongodb+srv://doadmin:3SPyA6U2Q901Ot75@dbaas-db-5626135-310aba91.mongo.ondigitalocean.com/egypt-horizon-scanner?tls=true&authSource=admin&replicaSet=dbaas-db-5626135'\n",
-        "# data_from_mongodb = retrieve_from_mongodb(mongo_uri)\n",
-        "# mongo_df = pd.DataFrame(data_from_mongodb)\n",
-        "# print(mongo_df)"
+        "mongo_uri = 'mongodb+srv://doadmin:73Le6F4d2hZ9K8Y0@dbaas-db-5626135-310aba91.mongo.ondigitalocean.com/egypt-horizon-scanner?replicaSet=dbaas-db-5626135&tls=true&authSource=admin'\n",
+        "data_from_mongodb = retrieve_from_mongodb(mongo_uri, 'emergence_issue_of_the_month_data')\n",
+        "mongo_df = pd.DataFrame(data_from_mongodb)\n",
+        "print(mongo_df)"
       ]
     },
     {
