--- a/Function/convert_json_csv_excel.ipynb
+++ b/Function/convert_json_csv_excel.ipynb
@@ -2,37 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandas in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (1.5.3)\n",
-      "Collecting openpyxl\n",
-      "  Downloading openpyxl-3.1.2-py2.py3-none-any.whl.metadata (2.5 kB)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/izzymohamed/Library/Python/3.11/lib/python/site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from pandas) (2023.3)\n",
-      "Requirement already satisfied: numpy>=1.21.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from pandas) (1.24.2)\n",
-      "Collecting et-xmlfile (from openpyxl)\n",
-      "  Downloading et_xmlfile-1.1.0-py3-none-any.whl.metadata (1.8 kB)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/izzymohamed/Library/Python/3.11/lib/python/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
-      "Downloading openpyxl-3.1.2-py2.py3-none-any.whl (249 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m250.0/250.0 kB\u001b[0m \u001b[31m4.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hDownloading et_xmlfile-1.1.0-py3-none-any.whl (4.7 kB)\n",
-      "Installing collected packages: et-xmlfile, openpyxl\n",
-      "Successfully installed et-xmlfile-1.1.0 openpyxl-3.1.2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# !pip3 install pandas openpyxl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,20 +92,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "\n",
     "# Convert excel to json\n",
-    "def excel_to_json(excel_filepath, json_filepath):\n",
+    "def excel_to_json(excel_filepath, json_filepath, sheet_name):\n",
     "    # Load the data from Excel into a DataFrame\n",
-    "    df = pd.read_excel(excel_filepath)\n",
+    "    df = pd.read_excel(excel_filepath, sheet_name=sheet_name)\n",
     "\n",
     "    # Write the DataFrame to a JSON file\n",
     "    df.to_json(json_filepath, orient='records', indent=4)\n",
     "\n",
     "# Example usage\n",
-    "# excel_to_json('data.xlsx', 'output.json')"
+    "excel_filepath = '/Users/izzymohamed/Desktop/Horizon Scanner/egypt-horizon-scanner/JSON/Digital Avatar/Restricted_ Last  Modified New Dimensions and Pillars.xlsx'\n",
+    "json_filepath = 'output.json'\n",
+    "sheet_name = 'Dimensions'  # Replace 'Sheet1' with the actual sheet name\n",
+    "# excel_to_json(excel_filepath, json_filepath, sheet_name)"
    ]
   },
   {
