--- a/Function/project_data_dummy_data.ipynb
+++ b/Function/project_data_dummy_data.ipynb
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,17 +653,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Detected encoding: utf-8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Open the file in binary mode and read a portion to detect its encoding\n",
     "with open(csv_file_path, 'rb') as file:\n",
@@ -676,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,17 +725,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CSV data has been successfully converted to JSON and saved to '/Users/izzymohamed/Desktop/Horizon Scanner/egypt_horizon_scanner_frontend/assets/json/project_data.json'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Detect the encoding of the CSV file\n",
     "with open(csv_file_path, 'rb') as file:\n",
@@ -772,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,18 +841,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data successfully written to /Users/izzymohamed/Desktop/Horizon Scanner/egypt_horizon_scanner_frontend/assets/csv/interventions_governorate_map.csv\n",
-      "Data successfully written to /Users/izzymohamed/Desktop/Horizon Scanner/egypt_horizon_scanner_frontend/assets/json/interventions_governorate_map.json\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Placeholder path to your JSON file\n",
     "json_file_path = '/Users/izzymohamed/Desktop/Horizon Scanner/egypt_horizon_scanner_frontend/assets/json/governorates.json'\n",
@@ -879,18 +854,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data successfully written to /Users/izzymohamed/Desktop/Horizon Scanner/egypt_horizon_scanner_frontend/assets/csv/interventions_municipal_division_map.csv\n",
-      "Data successfully written to /Users/izzymohamed/Desktop/Horizon Scanner/egypt_horizon_scanner_frontend/assets/json/interventions_municipal_division_map.json\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Placeholder path to your JSON file\n",
     "json_file_path = '/Users/izzymohamed/Desktop/Horizon Scanner/egypt_horizon_scanner_frontend/assets/json/municipal_divisions.json'\n",
@@ -927,6 +893,91 @@
     "\n",
     "print(\"Coordinates key has been removed and the file has been updated.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "# Read the JSON file\n",
+    "with open(\"/Users/izzymohamed/Desktop/Horizon Scanner/egypt-horizon-scanner/JSON/Digital Avatar/Dimensions.json\", 'r') as file:\n",
+    "    data = json.load(file)\n",
+    "    \n",
+    "    # Convert \"Data Visualization\" from string to list of strings\n",
+    "    for item in data:\n",
+    "        if \"Data Visualization\" in item:\n",
+    "            visualization = item[\"Data Visualization\"]\n",
+    "            if visualization and visualization.lower() not in [\"none\", \"null\"]:\n",
+    "                split_visualization = []\n",
+    "                for v in visualization.split(\", \"):\n",
+    "                    split_visualization.extend([x.strip() for x in v.split(\"and \")])\n",
+    "                    split_visualization.extend([x.strip() for x in v.split(\"or \")])\n",
+    "                # Remove duplicates\n",
+    "                item[\"Data Visualization\"] = list(set(split_visualization))\n",
+    "\n",
+    "# Save the modified data back to the JSON file\n",
+    "# output_file_path = \"/Users/izzymohamed/Desktop/Horizon Scanner/egypt-horizon-scanner/JSON/Digital Avatar/Modified_Dimensions.json\"\n",
+    "# with open(output_file_path, 'w') as output_file:\n",
+    "#     json.dump(data, output_file, indent=4)\n",
+    "\n",
+    "# print(\"Modified JSON data has been saved to:\", output_file_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "\"Qualitative\",\n",
+      "\"Pie Chart\",\n",
+      "\"Line Chart\",\n",
+      "\"Quantitative\",\n",
+      "\"Area Chart\",\n",
+      "\"Donut Chart\",\n",
+      "\"Info Box\",\n",
+      "\"Column Chart\",\n",
+      "\"Timeline (number of people and years)\",\n",
+      "\"Bar Chart\",\n",
+      "\"Inside-Out Pie Chart\",\n",
+      "\"Bubbles\",\n",
+      "\"Timeline\",\n",
+      "\"GIS Map\",\n",
+      "\"Map\",\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "# Read the JSON file\n",
+    "with open(\"/Users/izzymohamed/Desktop/Horizon Scanner/egypt-horizon-scanner/JSON/Digital Avatar/Modified_Dimensions.json\", 'r') as file:\n",
+    "    data = json.load(file)\n",
+    "\n",
+    "    # Extract unique values for DataVisualization\n",
+    "    unique_visualizations = set()\n",
+    "    for entry in data:\n",
+    "        data_visualization = entry.get(\"DataVisualization\")\n",
+    "        if data_visualization is not None and data_visualization not in [\"none\", \"null\"]:\n",
+    "            if isinstance(data_visualization, list):\n",
+    "                unique_visualizations.update(data_visualization)\n",
+    "            elif isinstance(data_visualization, str):\n",
+    "                unique_visualizations.add(data_visualization)\n",
+    "\n",
+    "    # Print unique visualizations as a list\n",
+    "    print(\"[\")\n",
+    "    for visualization in unique_visualizations:\n",
+    "        print(f'\"{visualization}\",')\n",
+    "    print(\"]\")\n"
+   ]
   }
  ],
  "metadata": {
@@ -945,7 +996,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
