removed overhead cost

--- a/Function/Response Now/Programmatic Simulation/summarizing_programmatic_simulation_data.ipynb
+++ b/Function/Response Now/Programmatic Simulation/summarizing_programmatic_simulation_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
     "            f\"1. Contextualize by selecting a thematic intervention, such as '{themes}', and offer insights into the status of {themes}-related projects in Egypt, \"\n",
     "            f\"including their quantity, geographic distribution, key donors, implementing partners, and total value according to the EHS database.\\n\\n\"\n",
     "            f\"2. Evaluate the intervention proposed by the user, who allocates {project_details['timeline']} year timeframe and {project_details['amountFilter']} {project_details['minAmount']} and {project_details['maxAmount']} or {project_details['amount']} for {themes} projects in the Egyptian Delta over \"\n",
-    "            f\"{project_details['timeline']} years, with a {project_details['overheadCost']}% overhead cost. This entails summarizing the key features of the 'Programmatic Simulation' feature they've outlined.\\n\\n\"\n",
+    "            f\"{project_details['timeline']} years. This entails summarizing the key features of the 'Programmatic Simulation' feature they've outlined.\\n\\n\"\n",
     "            f\"3. Critique the user's decision. While the user aims to address a specific issue, like {project_details['description']}, it's recommended to provide relevant statistics and suggest collaborating with organizations like Gavi for extended medicine or vaccine provision and the African Development Bank (AfDB) for grants on water provision to support sustainable agriculture and animal production. \"\n",
     "            f\"This suggested intervention can be executed within the {project_details['timeline']} year timeframe and {project_details['amountFilter']} {project_details['minAmount']} and {project_details['maxAmount']} or {project_details['amount']} budget by collaborating with these partners and implementing specific activities. Alternatively, considering the budget, another impactful {themes} intervention could involve {project_details['description']}.\"\n",
     "            f\"Provide the answer in a structured format, made up of Insights, Critique, a budget breakdown, summary, analysis and recommendations, and suggested intervention. and save as a JSON format.\"\n",
@@ -59,7 +59,7 @@
     "        if len(sys.argv) < 2:\n",
     "            raise ValueError(\"No project details provided\")\n",
     "\n",
-    "        project_details = json.loads('{\"themes\": [\"health\", \"education\"],\"regions\": [\"Cairo\", \"Giza\"],\"municipalDivisions\": [\"Division1\", \"Division2\"],\"governorates\": [\"Governorate1\", \"Governorate2\"],\"minAmount\": 1000,\"maxAmount\": 5000,\"amount\": 0,\"timeline\": 3,\"overheadCost\": 10,\"amountFilter\": \"between\",\"description\": \"Create a hospital\"}')\n",
+    "        project_details = json.loads('{\"_id\":null,\"description\":\"build a house\",\"themes\":[\"house\"],\"municipalDivisions\":[\"10 Ramadan 1\",\"10 Ramadan 2\"],\"governorates\":[\"Alexandria\",\"Assiut\"],\"minAmount\":0,\"maxAmount\":0,\"amount\":4000,\"timeline\":10,\"amountFilter\":\"Equals\",\"budget_breakdown\":null,\"analysis_and_recommendations\":null,\"suggested_intervention\":null,\"summary\":null, \"overheadCost\":10}')\n",
     "\n",
     "        # Analyze text using the provided project details\n",
     "        analysis_results = asyncio.run(analyze_text(project_details))\n",
