--- a/Function/Response Now/Programmatic Simulation/summarizing_programmatic_simulation_data.ipynb
+++ b/Function/Response Now/Programmatic Simulation/summarizing_programmatic_simulation_data.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'budget_breakdown': {'total_budget': 4000, 'allocation': {'house projects': 4000}}, 'analysis_and_recommendations': {'collaborating_partners': ['Gavi', 'African Development Bank'], 'specific_activities': ['extended medicine or vaccine provision', 'grants on water provision for sustainable agriculture and animal production'], 'execution_plan': 'Collaborate with Gavi for extended medicine or vaccine provision and the African Development Bank for grants on water provision to support sustainable agriculture and animal production. Implement specific activities within the allocated budget over the 10-year timeframe.'}, 'summary': \"The user's proposed intervention of building houses in the Egyptian Delta over 10 years with a budget of 4000 is feasible. However, collaborating with organizations like Gavi and the African Development Bank for extended medicine, vaccine provision, and water grants for sustainable agriculture and animal production could enhance the impact of the intervention.\", 'suggested_intervention': 'Collaborate with Gavi and the African Development Bank to provide extended medicine, vaccines, and water grants for sustainable agriculture and animal production in the Egyptian Delta over 10 years.', 'insights': {'thematic_intervention': 'house', 'status_of_house_projects': {'quantity': 'N/A', 'geographic_distribution': 'Egyptian Delta', 'key_donors': 'N/A', 'implementing_partners': 'N/A', 'total_value': 'N/A'}}, 'critique': \"While the user's proposed intervention of building houses is important, collaborating with organizations like Gavi and the African Development Bank could enhance the impact and sustainability of the intervention by addressing broader health and water provision needs in the Egyptian Delta.\"}\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import asyncio\n",
@@ -40,13 +48,22 @@
     "            f\"{project_details['timeline']} years. This entails summarizing the key features of the 'Programmatic Simulation' feature they've outlined.\\n\\n\"\n",
     "            f\"3. Critique the user's decision. While the user aims to address a specific issue, like {project_details['description']}, it's recommended to provide relevant statistics and suggest collaborating with organizations like Gavi for extended medicine or vaccine provision and the African Development Bank (AfDB) for grants on water provision to support sustainable agriculture and animal production. \"\n",
     "            f\"This suggested intervention can be executed within the {project_details['timeline']} year timeframe and {project_details['amountFilter']} {project_details['minAmount']} and {project_details['maxAmount']} or {project_details['amount']} budget by collaborating with these partners and implementing specific activities. Alternatively, considering the budget, another impactful {themes} intervention could involve {project_details['description']}.\"\n",
-    "            f\"Provide the answer in a structured format, made up of Insights, Critique, a budget breakdown, summary, analysis and recommendations, and suggested intervention. and save as a JSON format.\"\n",
+    "            f\"Provide the answer in a structured format, made up of Insights, Critique, a budget breakdown, summary, analysis and recommendations, and suggested intervention. and save as a JSON format as budget_breakdown, analysis_and_recommendations, summary, suggested_intervention, insights, critique.\"\n",
     "        )\n",
     "\n",
     "        response, _, _ = await gpt_get(prompt)\n",
     "\n",
     "        # Assuming the response is already in structured format\n",
     "        structured_response = json.loads(response)\n",
+    "\n",
+    "        print(structured_response)\n",
+    "\n",
+    "        # Convert structured response to JSON format\n",
+    "        json_response = json.dumps(structured_response, indent=2)\n",
+    "        \n",
+    "        # Save JSON to a file\n",
+    "        # with open('output.json', 'w') as f:\n",
+    "        #     f.write(json_response)\n",
     "\n",
     "        return structured_response\n",
     "    except Exception as e:\n",
