fixed ps prompt

--- a/Function/Response Now/Programmatic Simulation/summarizing_programmatic_simulation_data.ipynb
+++ b/Function/Response Now/Programmatic Simulation/summarizing_programmatic_simulation_data.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'budget_breakdown': {'total_budget': 4000, 'allocation': {'house projects': 4000}}, 'analysis_and_recommendations': {'collaborating_partners': ['Gavi', 'African Development Bank'], 'specific_activities': ['extended medicine or vaccine provision', 'grants on water provision for sustainable agriculture and animal production'], 'execution_plan': 'Collaborate with Gavi for extended medicine or vaccine provision and the African Development Bank for grants on water provision to support sustainable agriculture and animal production. Implement specific activities within the allocated budget over the 10-year timeframe.'}, 'summary': \"The user's proposed intervention of building houses in the Egyptian Delta over 10 years with a budget of 4000 is feasible. However, collaborating with organizations like Gavi and the African Development Bank for extended medicine, vaccine provision, and water grants for sustainable agriculture and animal production could enhance the impact of the intervention.\", 'suggested_intervention': 'Collaborate with Gavi and the African Development Bank to provide extended medicine, vaccines, and water grants for sustainable agriculture and animal production in the Egyptian Delta over 10 years.', 'insights': {'thematic_intervention': 'house', 'status_of_house_projects': {'quantity': 'N/A', 'geographic_distribution': 'Egyptian Delta', 'key_donors': 'N/A', 'implementing_partners': 'N/A', 'total_value': 'N/A'}}, 'critique': \"While the user's proposed intervention of building houses is important, collaborating with organizations like Gavi and the African Development Bank could enhance the impact and sustainability of the intervention by addressing broader health and water provision needs in the Egyptian Delta.\"}\n"
+      "{'insights': 'According to the EHS database, there are currently 50 Agriculture-related projects in Egypt, with a focus on crop production, irrigation, and livestock. These projects are spread across various regions in Egypt, with key donors including the World Bank, USAID, and the European Union. Implementing partners range from local NGOs to international organizations, with a total value of $100 million.', 'critique': \"While the user's proposed intervention of focusing on harvest cash crop in the Egyptian Delta over 45 years is commendable, it may not fully address the complex challenges facing agriculture in the region. Collaborating with organizations like Gavi and the AfDB could provide additional support in areas such as healthcare and water provision, which are crucial for sustainable agriculture and animal production. This holistic approach could lead to more impactful and sustainable outcomes.\", 'budget_breakdown': 'The budget breakdown for the proposed intervention includes $500 million for crop production, $300 million for irrigation infrastructure, and $200 million for livestock development over the 45-year timeframe.', 'summary': \"In summary, the user's proposed intervention focuses on harvest cash crop in the Egyptian Delta over 45 years, with a total budget of $1 billion. While this intervention is important, collaborating with organizations like Gavi and the AfDB could enhance its impact and sustainability.\", 'analysis_and_recommendations': \"To enhance the proposed intervention, it is recommended to collaborate with organizations like Gavi for extended medicine or vaccine provision and the AfDB for grants on water provision. This collaboration could support sustainable agriculture and animal production in the Egyptian Delta, leading to more impactful outcomes. Additionally, implementing specific activities such as training programs for farmers and investing in climate-resilient crops could further enhance the intervention's effectiveness.\", 'suggested_intervention': 'A suggested intervention within the allocated budget and timeframe could involve collaborating with Gavi and the AfDB to support sustainable agriculture and animal production in the Egyptian Delta. This could include activities such as providing healthcare services to farmers, improving water access for irrigation, and promoting climate-resilient farming practices. By taking a holistic approach and leveraging partnerships, this intervention could lead to long-term benefits for the agricultural sector in Egypt.'}\n"
      ]
     }
    ],
@@ -48,7 +48,7 @@
     "            f\"{project_details['timeline']} years. This entails summarizing the key features of the 'Programmatic Simulation' feature they've outlined.\\n\\n\"\n",
     "            f\"3. Critique the user's decision. While the user aims to address a specific issue, like {project_details['description']}, it's recommended to provide relevant statistics and suggest collaborating with organizations like Gavi for extended medicine or vaccine provision and the African Development Bank (AfDB) for grants on water provision to support sustainable agriculture and animal production. \"\n",
     "            f\"This suggested intervention can be executed within the {project_details['timeline']} year timeframe and {project_details['amountFilter']} {project_details['minAmount']} and {project_details['maxAmount']} or {project_details['amount']} budget by collaborating with these partners and implementing specific activities. Alternatively, considering the budget, another impactful {themes} intervention could involve {project_details['description']}.\"\n",
-    "            f\"Provide the answer in a structured format, made up of Insights, Critique, a budget breakdown, summary, analysis and recommendations, and suggested intervention. and save as a JSON format as budget_breakdown, analysis_and_recommendations, summary, suggested_intervention, insights, critique.\"\n",
+    "            f\"Provide the answer in a structured format, made up of Insights, Critique, a budget breakdown, summary, analysis and recommendations, and suggested intervention. each should have a paragragh and save as a JSON format as budget_breakdown, analysis_and_recommendations, summary, suggested_intervention, insights, critique, all with type string\"\n",
     "        )\n",
     "\n",
     "        response, _, _ = await gpt_get(prompt)\n",
@@ -76,7 +76,7 @@
     "        if len(sys.argv) < 2:\n",
     "            raise ValueError(\"No project details provided\")\n",
     "\n",
-    "        project_details = json.loads('{\"_id\":null,\"description\":\"build a house\",\"themes\":[\"house\"],\"municipalDivisions\":[\"10 Ramadan 1\",\"10 Ramadan 2\"],\"governorates\":[\"Alexandria\",\"Assiut\"],\"minAmount\":0,\"maxAmount\":0,\"amount\":4000,\"timeline\":10,\"amountFilter\":\"Equals\",\"budget_breakdown\":null,\"analysis_and_recommendations\":null,\"suggested_intervention\":null,\"summary\":null, \"overheadCost\":10}')\n",
+    "        project_details = json.loads('{\"_id\":null,\"description\":\"harvest cash crop\",\"themes\":[\"Agriculture\"],\"municipalDivisions\":[\"10 Ramadan 1\"],\"governorates\":[\"Alexandria\"],\"minAmount\":0,\"maxAmount\":0,\"amount\":1000,\"timeline\":45,\"amountFilter\":\"Equals\",\"budget_breakdown\":null,\"analysis_and_recommendations\":null,\"suggested_intervention\":null,\"summary\":null,\"insights\":null,\"critique\":null}')\n",
     "\n",
     "        # Analyze text using the provided project details\n",
     "        analysis_results = asyncio.run(analyze_text(project_details))\n",
@@ -85,6 +85,13 @@
     "        print(json.dumps({'error': str(e)}))\n",
     "        sys.exit(1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
