--- a/Function/project_data_dummy_data.ipynb
+++ b/Function/project_data_dummy_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,9 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Alexandria', 'Assiut', 'Aswan', 'Behera', 'Beni Suef', 'Cairo', 'Dakahlia', 'Damietta', 'Fayoum', 'Gharbia', 'Giza', 'Ismailia', 'Kafr El-Shikh', 'Kalyoubia', 'Luxor', 'Matrouh', 'Menia', 'Menoufia', 'New Valley', 'North Sinai', 'Port Said', 'Qena', 'Red Sea', 'Sharkia', 'South Sinai', 'Suez', 'Suhag']\n"
+     ]
+    }
+   ],
    "source": [
     "# Replace 'geojson_data.json' with the path to your actual GeoJSON file\n",
     "json_file_path = '/Users/izzymohamed/Desktop/Horizon Scanner/egypt_horizon_scanner_frontend/assets/json/governorates.json'\n",
@@ -39,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,9 +454,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file /Users/izzymohamed/Desktop/Horizon Scanner/egypt_horizon_scanner_frontend/assets/json/regions.json does not exist.\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    with open(json_file_path, 'r') as file:\n",
@@ -506,42 +522,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'kism'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "get_municipal_division_type(\"10 Ramadan 1\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Assuming 'df' is your DataFrame and it already contains 'municipal_divisions_type' column\n",
-    "\n",
-    "# Get all rows where municipal_divisions_type is 'Division not found' and print their municipal_divisions_name_EN\n",
-    "not_found_divisions = df.loc[df[\"municipal_divisions_type\"] == \"Division not found\", \"municipal_divisions_name_EN\"]\n",
-    "\n",
-    "# Print the result\n",
-    "print(not_found_divisions)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 'ID690',\n",
+       "  'projectNo': 690,\n",
+       "  'projectName': 'Project 690',\n",
+       "  'projectDetail': 'Detail of project 690',\n",
+       "  'photoURL': 'https://picsum.photos/250?image=24',\n",
+       "  'executingAgency': 'Agency',\n",
+       "  'status': 'pending',\n",
+       "  'theme': ['H_D'],\n",
+       "  'estimatedCost': 91489,\n",
+       "  'budget': 61591,\n",
+       "  'totalDonatedAmount': 61405,\n",
+       "  'startDate': '2024-01-15',\n",
+       "  'endDate': '2024-02-19',\n",
+       "  'Latitude': -67.417251,\n",
+       "  'Longitude': -5.628984,\n",
+       "  'City_Name_EN': 'City',\n",
+       "  'City_Name_AR': 'مدينة',\n",
+       "  'City_Name_PCODE': '',\n",
+       "  'City_PCODE': '',\n",
+       "  'State_Name_EN': 'State',\n",
+       "  'State_Name_AR': 'حالة',\n",
+       "  'State_Name_PCODE': '',\n",
+       "  'Region_Name_EN': 'Region',\n",
+       "  'Region_Name_AR': 'منطقة',\n",
+       "  'Region_PCODE': '',\n",
+       "  'Locality_Name_EN': 'Locality',\n",
+       "  'Locality_Name_AR': 'محلية',\n",
+       "  'Locality_PCODE': '',\n",
+       "  'Province_Name_EN': 'Province',\n",
+       "  'Province_Name_AR': 'محافظة',\n",
+       "  'Province_PCODE': '',\n",
+       "  'municipal_divisions_type': '',\n",
+       "  'municipal_divisions_name_EN': '',\n",
+       "  'municipal_divisions_name_AR': '',\n",
+       "  'municipal_divisions_name_PCODE': '',\n",
+       "  'Governorate_Name_EN': 'New Valley',\n",
+       "  'Governorate_Name_AR': 'محافظة',\n",
+       "  'Governorate_PCODE': '',\n",
+       "  'District_Name_EN': 'District',\n",
+       "  'District_Name_AR': 'منطقة',\n",
+       "  'District_PCODE': '',\n",
+       "  'Country_EN': 'Country',\n",
+       "  'Country_AR': 'بلد',\n",
+       "  'Country_PCODE': '',\n",
+       "  'donor': 'Donor',\n",
+       "  'contribution': 'Contribution',\n",
+       "  'dataReliability': 'High'},\n",
+       " {'id': 'ID24',\n",
+       "  'projectNo': 24,\n",
+       "  'projectName': 'Project 24',\n",
+       "  'projectDetail': 'Detail of project 24',\n",
+       "  'photoURL': 'https://picsum.photos/250?image=100',\n",
+       "  'executingAgency': 'Agency',\n",
+       "  'status': 'pending',\n",
+       "  'theme': ['H_D'],\n",
+       "  'estimatedCost': 63537,\n",
+       "  'budget': 21411,\n",
+       "  'totalDonatedAmount': 30575,\n",
+       "  'startDate': '2024-05-29',\n",
+       "  'endDate': '2025-10-03',\n",
+       "  'Latitude': 29.291013,\n",
+       "  'Longitude': 159.340774,\n",
+       "  'City_Name_EN': 'City',\n",
+       "  'City_Name_AR': 'مدينة',\n",
+       "  'City_Name_PCODE': '',\n",
+       "  'City_PCODE': '',\n",
+       "  'State_Name_EN': 'State',\n",
+       "  'State_Name_AR': 'حالة',\n",
+       "  'State_Name_PCODE': '',\n",
+       "  'Region_Name_EN': 'Region',\n",
+       "  'Region_Name_AR': 'منطقة',\n",
+       "  'Region_PCODE': '',\n",
+       "  'Locality_Name_EN': 'Locality',\n",
+       "  'Locality_Name_AR': 'محلية',\n",
+       "  'Locality_PCODE': '',\n",
+       "  'Province_Name_EN': 'Province',\n",
+       "  'Province_Name_AR': 'محافظة',\n",
+       "  'Province_PCODE': '',\n",
+       "  'municipal_divisions_type': '',\n",
+       "  'municipal_divisions_name_EN': '',\n",
+       "  'municipal_divisions_name_AR': '',\n",
+       "  'municipal_divisions_name_PCODE': '',\n",
+       "  'Governorate_Name_EN': 'Cairo',\n",
+       "  'Governorate_Name_AR': 'محافظة',\n",
+       "  'Governorate_PCODE': '',\n",
+       "  'District_Name_EN': 'District',\n",
+       "  'District_Name_AR': 'منطقة',\n",
+       "  'District_PCODE': '',\n",
+       "  'Country_EN': 'Country',\n",
+       "  'Country_AR': 'بلد',\n",
+       "  'Country_PCODE': '',\n",
+       "  'donor': 'Donor',\n",
+       "  'contribution': 'Contribution',\n",
+       "  'dataReliability': 'High'}]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from random import choice, randint\n",
     "import datetime\n",
@@ -630,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,9 +760,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Detected encoding: utf-8\n"
+     ]
+    }
+   ],
    "source": [
     "# Open the file in binary mode and read a portion to detect its encoding\n",
     "with open(csv_file_path, 'rb') as file:\n",
@@ -668,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,13 +840,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CSV data has been successfully converted to JSON and saved to '/Users/izzymohamed/Desktop/Horizon Scanner/egypt_horizon_scanner_frontend/assets/json/project_data.json'\n"
+     ]
+    }
+   ],
    "source": [
     "# Detect the encoding of the CSV file\n",
     "with open(csv_file_path, 'rb') as file:\n",
     "    encoding = chardet.detect(file.read(10000))['encoding']\n",
+    "\n",
+    "# Read the CSV file into a pandas DataFrame\n",
+    "df = pd.read_csv(csv_file_path, encoding=encoding)\n",
     "\n",
     "\n",
     "# Read the CSV file into a pandas DataFrame using the detected encoding\n",
@@ -752,6 +878,46 @@
     "    json.dump(data, json_file, indent=4, ensure_ascii=False)\n",
     "\n",
     "print(f\"CSV data has been successfully converted to JSON and saved to '{json_file_path}'\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'Coordinates' field removed and updated data saved to /Users/izzymohamed/Desktop/Horizon Scanner/egypt-horizon-scanner/JSON/Response Now/Interventions Mapping/interventions_governorate_map1.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "# Function to remove the 'Coordinates' field from the JSON data\n",
+    "def remove_coordinates(json_data):\n",
+    "    for item in json_data:\n",
+    "        if 'Coordinates' in item:\n",
+    "            del item['Coordinates']\n",
+    "    return json_data\n",
+    "\n",
+    "# Read the JSON file\n",
+    "input_file = '/Users/izzymohamed/Desktop/Horizon Scanner/egypt-horizon-scanner/JSON/Response Now/Interventions Mapping/interventions_governorate_map.json'\n",
+    "output_file = '/Users/izzymohamed/Desktop/Horizon Scanner/egypt-horizon-scanner/JSON/Response Now/Interventions Mapping/interventions_governorate_map1.json'\n",
+    "\n",
+    "with open(input_file, 'r', encoding='utf-8') as file:\n",
+    "    data = json.load(file)\n",
+    "\n",
+    "# Remove the 'Coordinates' field\n",
+    "updated_data = remove_coordinates(data)\n",
+    "\n",
+    "# Write the updated JSON data back to a file\n",
+    "with open(output_file, 'w', encoding='utf-8') as file:\n",
+    "    json.dump(updated_data, file, ensure_ascii=False, indent=4)\n",
+    "\n",
+    "print(f\"'Coordinates' field removed and updated data saved to {output_file}\")\n"
    ]
   },
   {
@@ -1190,7 +1356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
