--- a/Function/Response Now/Emergence Issue Of The Month/GPT_3_5.ipynb
+++ b/Function/Response Now/Emergence Issue Of The Month/GPT_3_5.ipynb
@@ -54,7 +54,7 @@
       },
       "outputs": [],
       "source": [
-        "def gpt_get(prompt: str, text: str, model = \"gpt-3.5-turbo\"):\n",
+        "def gpt_get(prompt: str, text: str, model = \"gpt-4o-mini\"): # gpt-3.5-turbo\n",
         "  messages = [{\"role\": \"user\", \"content\": prompt+\"\\n\"+text}]\n",
         "  response = client.chat.completions.create(\n",
         "        model=model,\n",
