change new api for gpt and used gpt 4 mini

--- a/Function/Response Now/Emergence Issue Of The Month/summarizing_emergence_issue_of_the_month_data.ipynb
+++ b/Function/Response Now/Emergence Issue Of The Month/summarizing_emergence_issue_of_the_month_data.ipynb
@@ -5416,7 +5416,7 @@
    "outputs": [],
    "source": [
     "# OpenAI API client initialization\n",
-    "client = OpenAI(api_key=\"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\")"
+    "client = OpenAI(api_key=\"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\")"
    ]
   },
   {
@@ -5426,7 +5426,7 @@
    "outputs": [],
    "source": [
     "# Function to get response from GPT-3.5-turbo\n",
-    "async def gpt_get(prompt, model=\"gpt-3.5-turbo\"):\n",
+    "async def gpt_get(prompt, model=\"gpt-4o-mini\"): # \"gpt-3.5-turbo\"):\n",
     "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
     "    try:\n",
     "        # Correctly await the async API call\n",
